Attempt to fix background attachment on mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,16 +3,25 @@
 @use './partials/mixins' as *;
 
 .App {
-  background-image: url(./assets/images/home.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-  background-attachment: initial;
+  // background-image: url(./assets/images/home.jpg);
+  // background-repeat: no-repeat;
+  // background-position: center;
+  // background-attachment: fixed;
   @include desktop {
     min-height: 100vh;
     max-width: 100vw;
     background-size: 120%;  
   }
+}
+
+.background {
+  background-image: url(./assets/images/home.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: -1;
 }
 
 .nav {
